[package]
name = "serverslog"
version = "0.1.0"

authors = ["Sébastien Santoro <dereckson@espace-win.org>"]
description = "A microservice to accept through AMQP log entries, stores them and serve the log as JSON"
repository="https://github.com/nasqueron/infra-serverslog"
license="BSD-2-Clause"

[dependencies]
amqp = "0.0.19"
env_logger = "^0.3"
iron = "0.4.*"
log = "^0.3.5"
router = "*"
rust-sqlite = "0.3.0"

[dev-dependencies]
iron-test = "0.4"
